<resources>
    <string name="app_name" translatable="false">WooBox For MIUI</string>
    <string name="performance">Performance</string>
    <string name="lock_max_fps">Lock the current refresh rate upper limit</string>
    <string name="ui">Interface</string>
    <string name="delete_on_post_notification">Remove display over notification</string>
    <string name="delete_on_post_notification_summary">Remove \"This app is displaying over other apps\" notification</string>
    <string name="other">Other</string>
    <string name="disable_flag_secure">Allow screenshot</string>
    <string name="disable_flag_secure_summary">Allow screenshot in software that does not allow to\nSupport adding drop-down quick setting on Control center for security</string>
    <string name="home">Home</string>
    <string name="home_time">Always display Home screen clock</string>
    <string name="reboot_host">Restart all scope</string>
    <string name="reboot">Reboot System</string>
    <string name="status_bar_icon">Status bar icons</string>
    <string name="hide_no_sim_icon">Hide No SIM icon</string>
    <string name="hide_sim_one_icon">Hide SIM Card 1 icon</string>
    <string name="hide_sim_two_icon">Hide SIM Card 2 icon</string>
    <string name="hide_vpn_icon">Hide VPN icon</string>
    <string name="hide_airplane_icon">Hide Airplane mode icon</string>
    <string name="hide_wifi_icon">Hide WIFI icon</string>
    <string name="hide_bluetooth_icon">Hide Bluetooth icon</string>
    <string name="hide_volume_zen_icon">Hide Sound and Do Not Disturb icon</string>
    <string name="hide_alarm_icon">Hide Alarm icon</string>
    <string name="hide_hotspot_icon">Hide Portable hotspot icon</string>
    <string name="hide_headset_icon">Hide Headset icon</string>
    <string name="hide_bluetooth_battery_icon">Hide Bluetooth battery icon</string>
    <string name="hide_nfc_icon">Hide NFC icon</string>
    <string name="hide_big_hd_icon">Hide big HD icon</string>
    <string name="hide_small_hd_icon">Hide small HD icon</string>
    <string name="hide_new_hd_icon">Hide new HD icon</string>
    <string name="hide_hd_no_service_icon">Hide HD No Service icon</string>
    <string name="about">About</string>
    <string name="about_module">About Module</string>
    <string name="verison">Version</string>
    <string name="dev_coolapk">Author Coolapk</string>
    <string name="dev_coolapk_name" translatable="false">\@乌堆小透明</string>
    <string name="opensource">Open Source Repository</string>
    <string name="github_url">Welcome more developers to participate in the development</string>
    <string name="issues">Feedback/Proposal</string>
    <string name="issues_url">Click to view GitHub Issues</string>
    <string name="xposeddescription">Customization tool for MIUI13+(Android 12+)</string>
    <string name="statusbar">Status bar</string>
    <string name="status_bar_time_seconds">Display seconds</string>
    <string name="status_bar_network_speed_refresh_speed">Network speed refresh in seconds</string>
    <string name="remove_the_maximum_number_of_notification_icons">Remove the maximum number of notification icons</string>
    <string name="main_switch">Module main switch</string>
    <string name="hide_gps_icon">Hide GPS icon</string>
    <string name="hide_status_bar_network_speed_second">Hide network speed (/s) units</string>
    <string name="menu">Menu</string>
    <string name="Tips">Tips</string>
    <string name="skip_waiting_time">Skip 5/10 seconds warning time</string>
    <string name="unlock_unlimited_cropping">Remove restriction on cropping pictures/screenshots</string>
    <string name="hide_slave_wifi_icon">Hide WIFI secondary icon</string>
    <string name="HideLauncherIcon">Hide Launcher icon</string>
    <string name="hide_battery_percentage_icon">Hide battery (%)</string>
    <string name="hide_battery_icon">Hide battery icon</string>
    <string name="status_bar_clock_format">Status bar clock format</string>
    <string name="status_bar_time_year">Display year</string>
    <string name="status_bar_time_month">Display month</string>
    <string name="status_bar_time_day">Display date</string>
    <string name="status_bar_time_week">Display day</string>
    <string name="status_bar_time_hide_space">Hide space</string>
    <string name="allow_screenshots">Allow screenshot</string>
    <string name="lock_max">Lock current limit</string>
    <string name="status_bar_time_double_hour">Display chinese twelve hour</string>
    <string name="custom_clock_switch">Custom Clock Switch</string>
    <string name="status_bar_time_period">Display AM/PM</string>
    <string name="status_bar_time_double_line">Dual row</string>
    <string name="status_bar_clock_size">Clock size (0: do not change)</string>
    <string name="status_bar_clock_double_line_size">Dual row size (0: do not change)</string>
    <string name="matters_needing_attention">Feature is not working? </string>
    <string name="Done">OK</string>
    <string name="about_module_summary">View module related information</string>
    <string name="contributor_list">Open source repository contributor list</string>
    <string name="developer">Developer</string>
    <string name="thank_list">Thanks list</string>
    <string name="third_party_open_source_statement">Third Party Open Source Statement</string>
    <string name="corepacth">Remove restrictions</string>
    <string name="corepacth_summary">Support downgrade/different signature/unsigned installation</string>
    <string name="prevent_recovery_of_battery_optimization_white_list">Prevent recovery of battery optimization whitelist</string>
    <string name="failed_after_restart">It will be restored after system restart</string>
    <string name="battery_optimization">Battery optimization</string>
    <string name="battery_optimization_summary">Quickly open the battery optimization menu hidden by MIUI</string>
    <string name="remove_small_window_restrictions">Force small windows</string>
    <string name="app_coolapk_url">Come and give us five-star review</string>
    <string name="app_coolapk_url_summary">This can make us more discoverable</string>
    <string name="qq_channel">Join the official QQ channel</string>
    <string name="tg_channel">Join the official TG channel</string>
    <string name="tg_channel_summary">You can enter the chat group on the channel page</string>
    <string name="discussions">Discussions</string>
    <string name="remove_small_window_restrictions_summary">Ignore system blacklist and software prohibition of small windows</string>
    <string name="remove_the_left_side_of_the_lock_screen">Remove the lock screen side panel</string>
    <string name="remove_lock_screen_camera">Remove the lock screen camera feature</string>
    <string name="only_official_default_themes_are_supported">Only official default themes are supported</string>
    <string name="lock_one_hundred">Set 100 points on Security app</string>
    <string name="scope">Scope</string>
    <string name="scope_android">System Framework</string>
    <string name="scope_systemui">SystemUI</string>
    <string name="scope_miuihome">Home screen</string>
    <string name="scope_other">Others</string>
    <string name="status_bar_network_speed_refresh_speed_summary">Change the refresh frequency of the status bar network speed component to 1s</string>
    <string name="hide_battery_percentage_icon_summary">Battery percentage display feature must be turned on by yourself</string>
    <string name="hide_status_bar_network_speed_second_summary">Hide the (/s) units of the status bar network speed component</string>
    <string name="remove_the_maximum_number_of_notification_icons_summary">Remove the limit of 3 notifications on the status bar</string>
    <string name="scope_systemui_summary">Customize system interface, status bar, lock screen, etc.</string>
    <string name="scope_android_summary">After enabling the module for the first time or the module is updated, the feature here will take effect after restarting the system</string>
    <string name="scope_other_summary">Security app, Gallery editor, Battery and performance, etc.</string>
    <string name="scope_powerkeeper">Battery and performance</string>
    <string name="scope_securitycenter">Security app</string>
    <string name="scope_mediaeditor">Gallery Editor</string>
    <string name="home_time_summary">When turned on, the clock will not be hidden on the status bar even if there is a clock widget</string>
    <string name="skip_waiting_time_summary">Ignore the waiting time by MIUI when eanbling USB debugging, unknown sources and accessibility</string>
    <string name="lock_one_hundred_summary">Set the score on Security app to 100 points and block the Optimize button</string>
    <string name="unlock_unlimited_cropping_summary">Ignore the minimum limit on image cropping by MIUI</string>
    <string name="hide_wifi_activity_icon">Hide WIFI activity icon</string>
    <string name="hide_mobile_activity_icon">Hide mobile activity icon</string>
    <string name="hide_mobile_type_icon">Hide mobile type icon</string>
    <string name="show_weather_main_switch">Show Weather - Main Switch</string>
    <string name="lock_screen">Lock screen</string>
    <string name="notification_center">Notification Center</string>
    <string name="show_city">Show the city</string>
    <string name="lock_max_fps_summary">Support adding drop-down control center quick setting for real-time switching</string>
    <string name="control_center">Control Center</string>
    <string name="control_center_weather_summary">The Mi Smart Hub version is not currently supported</string>
    <string name="not_support">You seem to be using an outdated version of LSPosed or LSPosed is not active, please update LSPosed or activate it and try again.</string>
    <string name="matters_needing_attention_context">It is recommended to restart the phone after the first activation or update\nMost of changes require restart in the top right corner to take effect</string>
    <string name="are_you_sure_reboot">Are you sure to reboot?</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_reboot_scope">Are you sure to reboot all scope?</string>
    <string name="hide_battery_charging_icon">Hide charging icon</string>
    <string name="hide_wifi_standard_icon">Hide WIFI standard icon</string>
    <string name="status_bar_time_center">Status bar time center</string>
    <string name="status_bar_layout_summary">More status bar layouts are under development</string>
    <string name="status_bar_layout">Status bar layout</string>
    <string name="layout_compatibility_mode">Compatibility mode</string>
    <string name="left_margin">Left margin (0: Auto)</string>
    <string name="right_margin">Right margin (0: Auto)</string>
    <string name="layout_compatibility_mode_summary">Force full screen layout (supports all special-shaped screens)</string>
    <string name="remove_macro_blacklist">Remove game macro blacklist</string>
    <string name="hide_network_speed_splitter">Hide network speed splitter</string>
    <string name="updater">Updater</string>
    <string name="remove_ota_validate">*Remove OTA validate [LAB]</string>
    <string name="remove_ota_validate_summary">- Only support VAB series use, please do not open other series.\n- No need for internal testing qualification to flash into the full internal testing package.\n- Those who have internal testing permission will not be able to receive internal testing updates, and can be used to block system updates.\n- After cross-version type upgrade, it is recommended to clear data.\n- Unofficial ROM usage is not supported.</string>
    <string name="settings">Settings</string>
    <string name="show_notification_importance">Show notification importance</string>
</resources>