<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        app:iconSpaceReserved="false"
        app:key="main_switch"
        app:title="@string/main_switch"
        app:defaultValue="true"/>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/ui">
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="delete_on_post_notification"
            app:title="@string/delete_on_post_notification" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/statusbar">
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="status_bar_time_seconds"
            app:title="@string/status_bar_time_seconds" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="status_bar_network_speed_refresh_speed"
            app:title="@string/status_bar_network_speed_refresh_speed" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="remove_the_maximum_number_of_notification_icons"
            app:title="@string/remove_the_maximum_number_of_notification_icons" />
    </PreferenceCategory>


    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/status_bar_icon">
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_gps_icon"
            app:title="@string/hide_gps_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_bluetooth_icon"
            app:title="@string/hide_bluetooth_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_bluetooth_battery_icon"
            app:title="@string/hide_bluetooth_battery_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_small_hd_icon"
            app:title="@string/hide_small_hd_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_big_hd_icon"
            app:title="@string/hide_big_hd_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_hd_no_service_icon"
            app:title="@string/hide_hd_no_service_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_sim_one_icon"
            app:title="@string/hide_sim_one_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_sim_two_icon"
            app:title="@string/hide_sim_two_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_no_sim_icon"
            app:title="@string/hide_no_sim_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_wifi_icon"
            app:title="@string/hide_wifi_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_hotspot_icon"
            app:title="@string/hide_hotspot_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_vpn_icon"
            app:title="@string/hide_vpn_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_airplane_icon"
            app:title="@string/hide_airplane_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_alarm_icon"
            app:title="@string/hide_alarm_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_headset_icon"
            app:title="@string/hide_headset_icon" />
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="hide_volume_zen_icon"
            app:title="@string/hide_volume_zen_icon" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/home">

        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="home_time"
            app:title="@string/home_time" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/performance">
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="lock_max_fps"
            app:title="@string/lock_max_fps" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/other">
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="disable_flag_secure"
            app:title="@string/disable_flag_secure" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about">

        <PreferenceScreen
            app:key="opensource"
            app:iconSpaceReserved="false"
            app:summary="@string/github_url"
            app:title="@string/opensource">
        </PreferenceScreen>

        <PreferenceScreen
            app:key="issues"
            app:iconSpaceReserved="false"
            app:summary="@string/issues_url"
            app:title="@string/issues">
        </PreferenceScreen>

        <PreferenceScreen
            app:key="dev_coolapk"
            app:iconSpaceReserved="false"
            app:summary="@string/dev_coolapk_name"
            app:title="@string/dev_coolapk">
        </PreferenceScreen>

        <PreferenceScreen
            app:key="verison"
            app:iconSpaceReserved="false"
            app:title="@string/verison">
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>